[package]
name = "shakyrave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
config = { version = "0.13.3", features = ["indexmap"] }
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
quick-xml = { version = "0.30.0", features = ["async-tokio"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
tera = "1.19.1"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
watchexec = "2.3.0"

[dev-dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
axum-test-helper = "0.3.0"
serial_test = "2.0.0"
