[package]
name = "shakyrave"
version = "0.1.0"
edition = "2021"

[workspaces]
members = [
    "orgparser",
    "orgdoctor",
]


[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
orgize = { version = "0.9.0", features = ["ser"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tera = "1.19.1"
watchexec = "2.3.0"

[dev-dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
